--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "mysql": "^2.18.1",
     "next": "13.0.2",
     "next-auth": "^4.16.4",
+    "node-cache": "^5.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
